Fixed widget text overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,7 @@ body {
   	transform-style: preserve-3d;
   	-moz-box-sizing: border-box;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .widget .editOverlay {
